valhalla-graphtile/src/snapshots/valhalla_graphtile__graph_tile__tests__first_edge_info.snap
---
source: valhalla-graphtile/src/graph_tile.rs
expression: first_edge_info
---
EdgeInfo {
    inner: EdgeInfoInner {
        way_id: U32(
            0,
        ),
        first_inner_bitfield: FirstInnerBitfield {
            mean_elevation: U16(
                250,
            ),
            bike_network: 0,
            speed_limit: 60,
            extended_way_id: 0,
        },
        second_inner_bitfield: SecondInnerBitfield {
            name_count: 0,
            encoded_shape_size: U16(
                61,
            ),
            extended_way_id: 0,
            extended_way_id_size: 0,
            has_elevation: 0,
        },
    },
    name_info_list: [],
    encoded_shape: [
        254,
        158,
        195,
        40,
        236,
        154,
        183,
        1,
        109,
        213,
        2,
        213,
        12,
        223,
        16,
        137,
        4,
        199,
        6,
        173,
        9,
        177,
        18,
        205,
        8,
        175,
        14,
        137,
        4,
        191,
        6,
        147,
        1,
        217,
        1,
        239,
        1,
        241,
        1,
        181,
        1,
        61,
        183,
        1,
        49,
        189,
        1,
        49,
        155,
        3,
        37,
        131,
        8,
        23,
        239,
        2,
        103,
        239,
        2,
        249,
        1,
    ],
    extended_way_id_2: 0,
    extended_way_id_3: 0,
    text_list_memory: [
        0,
        78,
        111,
        110,
        101,
        0,
        65,
        110,
        100,
        111,
        114,
        114,
        97,
        0,
        67,
        71,
        45,
        49,
        0,
        2,
        9,
        0,
        5,
        0,
        65,
        118,
        105,
        110,
        103,
        117,
        100,
        97,
        32,
        100,
        101,
        32,
        83,
        97,
        108,
        111,
        117,
        0,
        2,
        9,
        0,
        5,
        9,
        0,
        13,
        0,
        82,
        111,
        116,
        111,
        110,
        100,
        97,
        32,
        100,
        101,
        32,
        108,
        101,
        115,
        32,
        67,
        111,
        115,
        116,
        101,
        115,
        0,
        69,
        115,
        112,
        97,
        195,
        177,
        97,
        0,
        67,
        97,
        116,
        97,
        108,
        117,
        110,
        121,
        97,
        0,
        78,
        45,
        49,
        52,
        53,
        0,
        82,
        111,
        116,
        111,
        110,
        100,
        97,
        32,
        100,
        101,
        32,
        108,
        97,
        32,
        74,
        117,
        98,
        101,
        114,
        114,
        117,
        115,
        115,
        97,
        0,
        67,
        97,
        114,
        114,
        101,
        114,
        32,
        70,
        114,
        97,
        110,
        99,
        101,
        115,
        99,
        32,
        67,
        97,
        114,
        97,
        116,
        0,
        1,
        1,
        0,
        114,
        111,
        116,
        111,
        110,
        100,
        97,
        0,
        99,
        97,
        114,
        114,
        101,
        116,
        101,
        114,
        97,
        32,
        71,
        101,
        110,
        101,
        114,
        97,
        108,
        32,
        49,
        0,
        67,
        71,
        45,
        54,
        0,
        84,
        195,
        186,
        110,
        101,
        108,
        32,
        100,
        101,
        32,
        108,
        97,
        32,
        84,
        195,
        160,
        112,
        105,
        97,
        0,
        1,
        255,
        0,
        2,
        9,
        0,
        13,
        9,
        0,
        21,
        0,
        1,
        2,
        0,
        80,
        111,
        110,
        116,
        32,
        100,
        101,
        32,
        77,
        97,
        100,
        114,
        105,
        100,
        0,
        67,
        71,
        45,
        52,
        0,
        65,
        118,
        105,
        110,
        103,
        117,
        100,
        97,
        32,
        100,
        101,
        108,
        32,
        82,
        97,
        118,
        101,
        108,
        108,
        0,
        67,
        97,
        114,
        114,
        101,
        116,
        101,
        114,
        97,
        32,
        100,
        39,
        69,
        114,
        116,
        115,
        0,
        67,
        71,
        45,
        53,
        0,
        67,
        97,
        114,
        114,
        101,
        116,
        101,
        114,
        97,
        32,
        100,
        39,
        65,
        114,
        105,
        110,
        115,
        97,
        108,
        0,
        67,
        97,
        114,
        114,
        101,
        116,
        101,
        114,
        97,
        32,
        71,
        101,
        110,
        101,
        114,
        97,
        108,
        32,
        51,
        0,
        67,
        71,
        45,
        51,
        0,
        82,
        111,
        116,
        111,
        110,
        100,
        97,
        32,
        100,
        101,
        32,
        67,
        97,
        115,
        97,
        100,
        101,
        116,
        0,
        65,
        118,
        105,
        110,
        103,
        117,
        100,
        97,
        32,
        100,
        101,
        32,
        84,
        97,
        114,
        114,
        97,
        103,
        111,
        110,
        97,
        0,
        82,
        111,
        116,
        111,
        110,
        100,
        97,
        32,
        100,
        101,
        32,
        108,
        97,
        32,
        67,
        111,
        109,
        101,
        108,
        108,
        97,
        0,
        82,
        111,
        116,
        111,
        110,
        100,
        97,
        32,
        101,
        108,
        115,
        32,
        77,
        97,
        114,
        103,
        105,
        110,
        101,
        116,
        115,
        0,
        86,
        105,
        97,
        108,
        32,
        100,
        101,
        32,
        108,
        97,
        32,
        85,
        110,
        105,
        195,
        178,
        0,
        82,
        111,
        116,
        111,
        110,
        100,
        97,
        32,
        74,
        111,
        115,
        101,
        112,
        32,
        69,
        115,
        99,
        97,
        108,
        101,
        114,
        0,
        82,
        111,
        116,
        111,
        110,
        100,
        97,
        32,
        75,
        109,
        46,
        32,
        48,
        0,
        67,
        71,
        45,
        50,
        0,
        86,
        105,
        97,
        108,
        32,
        100,
        101,
        32,
        108,
        97,
        32,
        85,
        110,
        105,
        195,
        179,
        0,
        82,
        111,
        116,
        111,
        110,
        100,
        97,
        32,
        100,
        101,
        108,
        32,
        71,
        97,
        108,
        108,
        0,
        67,
        97,
        114,
        114,
        101,
        114,
        32,
        100,
        101,
        108,
        32,
        86,
        97,
        108,
        105,
        114,
        97,
        0,
        84,
        195,
        186,
        110,
        101,
        108,
        32,
        100,
        101,
        108,
        32,
        80,
        111,
        110,
        116,
        32,
        80,
        108,
        97,
        0,
        67,
        71,
        45,
        51,
        97,
        0,
        84,
        195,
        186,
        110,
        101,
        108,
        32,
        100,
        101,
        32,
        108,
        101,
        115,
        32,
        100,
        111,
        115,
        32,
        86,
        97,
        108,
        105,
        114,
        101,
        115,
        0,
        65,
        118,
        105,
        110,
        103,
        117,
        100,
        97,
        32,
        67,
        111,
        112,
        114,
        105,
        110,
        99,
        101,
        112,
        32,
        195,
        137,
        112,
        105,
        115,
        99,
        111,
        112,
        97,
        108,
        0,
        80,
        111,
        110,
        116,
        32,
        100,
        101,
        32,
        83,
        97,
        110,
        116,
        32,
        65,
        110,
        116,
        111,
        110,
        105,
        0,
        84,
        195,
        186,
        110,
        101,
        108,
        32,
        100,
        101,
        32,
        83,
        97,
        110,
        116,
        32,
        65,
        110,
        116,
        111,
        110,
        105,
        0,
        80,
        111,
        110,
        116,
        32,
        100,
        101,
        32,
        76,
        105,
        115,
        98,
        111,
        97,
        0,
        84,
        195,
        186,
        110,
        101,
        108,
        32,
        100,
        101,
        32,
        82,
        97,
        100,
        105,
        111,
        32,
        65,
        110,
        100,
        111,
        114,
        114,
        97,
        0,
        65,
        118,
        105,
        110,
        103,
        117,
        100,
        97,
        32,
        100,
        101,
        32,
        83,
        97,
        110,
        116,
        32,
        65,
        110,
        116,
        111,
        110,
        105,
        0,
        48,
        124,
        48,
        124,
        53,
        49,
        50,
        0,
        80,
        111,
        114,
        116,
        32,
        100,
        39,
        69,
        110,
        118,
        97,
        108,
        105,
        114,
        97,
        0,
        49,
        124,
        53,
        49,
        50,
        0,
        65,
        118,
        105,
        110,
        103,
        117,
        100,
        97,
        32,
        83,
        97,
        110,
        116,
        32,
        65,
        110,
        116,
        111,
        110,
        105,
        0,
        67,
        71,
        51,
        0,
        65,
        118,
        105,
        110,
        103,
        117,
        100,
        97,
        32,
        100,
        101,
        108,
        32,
        84,
        114,
        97,
        118,
        195,
        169,
        115,
        0,
        65,
        118,
        105,
        110,
        103,
        117,
        100,
        97,
        32,
        101,
        108,
        32,
        84,
        114,
        97,
        118,
        195,
        168,
        115,
        0,
        67,
        71,
        45,
        50,
        97,
        0,
        84,
        195,
        186,
        110,
        101,
        108,
        32,
        100,
        39,
        69,
        110,
        118,
        97,
        108,
        105,
        114,
        97,
        0,
        65,
        118,
        105,
        110,
        103,
        117,
        100,
        97,
        32,
        100,
        101,
        108,
        32,
        67,
        111,
        110,
        115,
        101,
        108,
        108,
        32,
        71,
        101,
        110,
        101,
        114,
        97,
        108,
        0,
        70,
        114,
        97,
        110,
        99,
        101,
        0,
        79,
        99,
        99,
        105,
        116,
        97,
        110,
        105,
        101,
        0,
        78,
        32,
        50,
        50,
        0,
        2,
        22,
        0,
        5,
        0,
        65,
        118,
        105,
        110,
        103,
        117,
        100,
        97,
        32,
        100,
        101,
        108,
        32,
        76,
        108,
        111,
        115,
        101,
        114,
        0,
        80,
        111,
        110,
        116,
        32,
        100,
        39,
        79,
        114,
        100,
        105,
        110,
        111,
        0,
        65,
        118,
        105,
        110,
        103,
        117,
        100,
        97,
        32,
        100,
        101,
        108,
        32,
        80,
        111,
        110,
        116,
        32,
        100,
        39,
        79,
        114,
        100,
        105,
        110,
        111,
        0,
        65,
        118,
        105,
        110,
        103,
        117,
        100,
        97,
        32,
        100,
        101,
        108,
        32,
        67,
        97,
        115,
        97,
        109,
        97,
        110,
        121,
        97,
        0,
        48,
        124,
        53,
        49,
        50,
        0,
        84,
        114,
        97,
        118,
        101,
        115,
        115,
        105,
        97,
        32,
        100,
        39,
        79,
        114,
        100,
        105,
        110,
        111,
        0,
        48,
        124,
        49,
        48,
        50,
        52,
        0,
        82,
        111,
        116,
        111,
        110,
        100,
        97,
        32,
        100,
        101,
        32,
        83,
        111,
        108,
        100,
        101,
        117,
        0,
        82,
        111,
        116,
        111,
        110,
        100,
        97,
        32,
        100,
        101,
        108,
        32,
        84,
        97,
        114,
        116,
        101,
        114,
        0,
        80,
        111,
        110,
        116,
        32,
        100,
        101,
        32,
        67,
        97,
        115,
        116,
        101,
        108,
        108,
        97,
        114,
        0,
        0,
        0,
        0,
    ],
}
