valhalla-graphtile/src/snapshots/valhalla_graphtile__graph_tile__tests__first_edge_info_decoded_shape.snap
---
source: valhalla-graphtile/src/graph_tile.rs
expression: first_edge_info.decode_raw_shape()
---
Ok(
    [
        COORD(1.500854 42.493887),
        COORD(1.500683 42.493832),
        COORD(1.499611 42.493021),
        COORD(1.499191 42.49276),
        COORD(1.498014 42.492160999999996),
        COORD(1.497094 42.49161),
        COORD(1.496678 42.491349),
        COORD(1.496569 42.491274999999995),
        COORD(1.496448 42.491155),
        COORD(1.4964169999999999 42.491064),
        COORD(1.496392 42.490972),
        COORD(1.496367 42.490877),
        COORD(1.496348 42.490671),
        COORD(1.4963359999999999 42.490156999999996),
        COORD(1.496284 42.489973),
        COORD(1.496159 42.489788999999995),
    ],
)
