valhalla-graphtile/src/snapshots/valhalla_graphtile__graph_tile__tests__first_edge_info_decoded_shape_f32.snap
---
source: valhalla-graphtile/src/graph_tile.rs
expression: "first_edge_info.decode_raw_shape::<f32>()"
---
Ok(
    [
        COORD(1.500854 42.49389),
        COORD(1.500683 42.49383),
        COORD(1.499611 42.49302),
        COORD(1.499191 42.49276),
        COORD(1.498014 42.49216),
        COORD(1.497094 42.491608),
        COORD(1.496678 42.49135),
        COORD(1.496569 42.491276),
        COORD(1.496448 42.491158),
        COORD(1.496417 42.491062),
        COORD(1.496392 42.49097),
        COORD(1.496367 42.490875),
        COORD(1.496348 42.490673),
        COORD(1.496336 42.490154),
        COORD(1.496284 42.48997),
        COORD(1.496159 42.489788),
    ],
)
