valhalla-graphtile/src/snapshots/valhalla_graphtile__graph_tile__tests__last_edge_info.snap
---
source: valhalla-graphtile/src/graph_tile.rs
expression: last_edge_info
---
EdgeInfo {
    inner: EdgeInfoInner {
        way_id: U32(
            247995246,
        ),
        first_inner_bitfield: FirstInnerBitfield {
            mean_elevation: U16(
                0,
            ),
            bike_network: 4,
            speed_limit: 60,
            extended_way_id: 0,
        },
        second_inner_bitfield: SecondInnerBitfield {
            name_count: 3,
            encoded_shape_size: U16(
                191,
            ),
            extended_way_id: 0,
            extended_way_id_size: 0,
            has_elevation: 0,
        },
    },
    name_info_list: [
        NameInfo {
            name_offset: U32(
                295,
            ),
            additional_fields: 0,
            is_route_num: 0,
            is_tagged: 0,
        },
        NameInfo {
            name_offset: U32(
                315,
            ),
            additional_fields: 0,
            is_route_num: 1,
            is_tagged: 0,
        },
        NameInfo {
            name_offset: U32(
                42,
            ),
            additional_fields: 0,
            is_route_num: 0,
            is_tagged: 1,
        },
    ],
    encoded_shape: [
        202,
        162,
        211,
        40,
        142,
        194,
        186,
        1,
        100,
        137,
        1,
        144,
        1,
        231,
        1,
        182,
        1,
        189,
        2,
        148,
        1,
        225,
        1,
        242,
        1,
        209,
        1,
        152,
        2,
        167,
        1,
        186,
        2,
        115,
        174,
        2,
        123,
        190,
        1,
        175,
        1,
        172,
        1,
        243,
        1,
        122,
        145,
        2,
        62,
        195,
        2,
        32,
        161,
        4,
        32,
        223,
        2,
        52,
        157,
        2,
        196,
        1,
        249,
        4,
        150,
        1,
        185,
        5,
        86,
        221,
        4,
        84,
        155,
        2,
        136,
        1,
        249,
        1,
        210,
        1,
        135,
        2,
        128,
        1,
        203,
        1,
        94,
        191,
        1,
        60,
        141,
        2,
        76,
        161,
        2,
        70,
        141,
        1,
        148,
        1,
        149,
        1,
        198,
        1,
        135,
        1,
        152,
        3,
        211,
        1,
        224,
        1,
        139,
        1,
        252,
        2,
        169,
        2,
        136,
        1,
        71,
        160,
        1,
        29,
        172,
        5,
        12,
        182,
        2,
        17,
        200,
        2,
        75,
        216,
        2,
        123,
        180,
        1,
        109,
        140,
        2,
        171,
        1,
        132,
        2,
        185,
        1,
        244,
        2,
        213,
        2,
        240,
        2,
        131,
        3,
        170,
        1,
        243,
        1,
        146,
        1,
        167,
        2,
        188,
        1,
        239,
        3,
        144,
        2,
        135,
        6,
        156,
        1,
        129,
        3,
        224,
        1,
        215,
        3,
        250,
        1,
        145,
        3,
        236,
        1,
        237,
        2,
        170,
        1,
        191,
        2,
    ],
    extended_way_id_2: 0,
    extended_way_id_3: 0,
    decoded_shape: OnceCell(
        <uninit>,
    ),
    text_list_memory: [
        0,
        78,
        111,
        110,
        101,
        0,
        65,
        110,
        100,
        111,
        114,
        114,
        97,
        0,
        67,
        71,
        45,
        49,
        0,
        2,
        9,
        0,
        5,
        0,
        65,
        118,
        105,
        110,
        103,
        117,
        100,
        97,
        32,
        100,
        101,
        32,
        83,
        97,
        108,
        111,
        117,
        0,
        2,
        9,
        0,
        5,
        9,
        0,
        13,
        0,
        82,
        111,
        116,
        111,
        110,
        100,
        97,
        32,
        100,
        101,
        32,
        108,
        101,
        115,
        32,
        67,
        111,
        115,
        116,
        101,
        115,
        0,
        69,
        115,
        112,
        97,
        195,
        177,
        97,
        0,
        67,
        97,
        116,
        97,
        108,
        117,
        110,
        121,
        97,
        0,
        78,
        45,
        49,
        52,
        53,
        0,
        82,
        111,
        116,
        111,
        110,
        100,
        97,
        32,
        100,
        101,
        32,
        108,
        97,
        32,
        74,
        117,
        98,
        101,
        114,
        114,
        117,
        115,
        115,
        97,
        0,
        67,
        97,
        114,
        114,
        101,
        114,
        32,
        70,
        114,
        97,
        110,
        99,
        101,
        115,
        99,
        32,
        67,
        97,
        114,
        97,
        116,
        0,
        1,
        1,
        0,
        114,
        111,
        116,
        111,
        110,
        100,
        97,
        0,
        99,
        97,
        114,
        114,
        101,
        116,
        101,
        114,
        97,
        32,
        71,
        101,
        110,
        101,
        114,
        97,
        108,
        32,
        49,
        0,
        67,
        71,
        45,
        54,
        0,
        84,
        195,
        186,
        110,
        101,
        108,
        32,
        100,
        101,
        32,
        108,
        97,
        32,
        84,
        195,
        160,
        112,
        105,
        97,
        0,
        1,
        255,
        0,
        2,
        9,
        0,
        13,
        9,
        0,
        21,
        0,
        1,
        2,
        0,
        80,
        111,
        110,
        116,
        32,
        100,
        101,
        32,
        77,
        97,
        100,
        114,
        105,
        100,
        0,
        67,
        71,
        45,
        52,
        0,
        65,
        118,
        105,
        110,
        103,
        117,
        100,
        97,
        32,
        100,
        101,
        108,
        32,
        82,
        97,
        118,
        101,
        108,
        108,
        0,
        67,
        97,
        114,
        114,
        101,
        116,
        101,
        114,
        97,
        32,
        100,
        39,
        69,
        114,
        116,
        115,
        0,
        67,
        71,
        45,
        53,
        0,
        67,
        97,
        114,
        114,
        101,
        116,
        101,
        114,
        97,
        32,
        100,
        39,
        65,
        114,
        105,
        110,
        115,
        97,
        108,
        0,
        67,
        97,
        114,
        114,
        101,
        116,
        101,
        114,
        97,
        32,
        71,
        101,
        110,
        101,
        114,
        97,
        108,
        32,
        51,
        0,
        67,
        71,
        45,
        51,
        0,
        82,
        111,
        116,
        111,
        110,
        100,
        97,
        32,
        100,
        101,
        32,
        67,
        97,
        115,
        97,
        100,
        101,
        116,
        0,
        65,
        118,
        105,
        110,
        103,
        117,
        100,
        97,
        32,
        100,
        101,
        32,
        84,
        97,
        114,
        114,
        97,
        103,
        111,
        110,
        97,
        0,
        82,
        111,
        116,
        111,
        110,
        100,
        97,
        32,
        100,
        101,
        32,
        108,
        97,
        32,
        67,
        111,
        109,
        101,
        108,
        108,
        97,
        0,
        82,
        111,
        116,
        111,
        110,
        100,
        97,
        32,
        101,
        108,
        115,
        32,
        77,
        97,
        114,
        103,
        105,
        110,
        101,
        116,
        115,
        0,
        86,
        105,
        97,
        108,
        32,
        100,
        101,
        32,
        108,
        97,
        32,
        85,
        110,
        105,
        195,
        178,
        0,
        82,
        111,
        116,
        111,
        110,
        100,
        97,
        32,
        74,
        111,
        115,
        101,
        112,
        32,
        69,
        115,
        99,
        97,
        108,
        101,
        114,
        0,
        82,
        111,
        116,
        111,
        110,
        100,
        97,
        32,
        75,
        109,
        46,
        32,
        48,
        0,
        67,
        71,
        45,
        50,
        0,
        86,
        105,
        97,
        108,
        32,
        100,
        101,
        32,
        108,
        97,
        32,
        85,
        110,
        105,
        195,
        179,
        0,
        82,
        111,
        116,
        111,
        110,
        100,
        97,
        32,
        100,
        101,
        108,
        32,
        71,
        97,
        108,
        108,
        0,
        67,
        97,
        114,
        114,
        101,
        114,
        32,
        100,
        101,
        108,
        32,
        86,
        97,
        108,
        105,
        114,
        97,
        0,
        84,
        195,
        186,
        110,
        101,
        108,
        32,
        100,
        101,
        108,
        32,
        80,
        111,
        110,
        116,
        32,
        80,
        108,
        97,
        0,
        67,
        71,
        45,
        51,
        97,
        0,
        84,
        195,
        186,
        110,
        101,
        108,
        32,
        100,
        101,
        32,
        108,
        101,
        115,
        32,
        100,
        111,
        115,
        32,
        86,
        97,
        108,
        105,
        114,
        101,
        115,
        0,
        65,
        118,
        105,
        110,
        103,
        117,
        100,
        97,
        32,
        67,
        111,
        112,
        114,
        105,
        110,
        99,
        101,
        112,
        32,
        195,
        137,
        112,
        105,
        115,
        99,
        111,
        112,
        97,
        108,
        0,
        80,
        111,
        110,
        116,
        32,
        100,
        101,
        32,
        83,
        97,
        110,
        116,
        32,
        65,
        110,
        116,
        111,
        110,
        105,
        0,
        84,
        195,
        186,
        110,
        101,
        108,
        32,
        100,
        101,
        32,
        83,
        97,
        110,
        116,
        32,
        65,
        110,
        116,
        111,
        110,
        105,
        0,
        80,
        111,
        110,
        116,
        32,
        100,
        101,
        32,
        76,
        105,
        115,
        98,
        111,
        97,
        0,
        84,
        195,
        186,
        110,
        101,
        108,
        32,
        100,
        101,
        32,
        82,
        97,
        100,
        105,
        111,
        32,
        65,
        110,
        100,
        111,
        114,
        114,
        97,
        0,
        65,
        118,
        105,
        110,
        103,
        117,
        100,
        97,
        32,
        100,
        101,
        32,
        83,
        97,
        110,
        116,
        32,
        65,
        110,
        116,
        111,
        110,
        105,
        0,
        48,
        124,
        48,
        124,
        53,
        49,
        50,
        0,
        80,
        111,
        114,
        116,
        32,
        100,
        39,
        69,
        110,
        118,
        97,
        108,
        105,
        114,
        97,
        0,
        49,
        124,
        53,
        49,
        50,
        0,
        65,
        118,
        105,
        110,
        103,
        117,
        100,
        97,
        32,
        83,
        97,
        110,
        116,
        32,
        65,
        110,
        116,
        111,
        110,
        105,
        0,
        67,
        71,
        51,
        0,
        65,
        118,
        105,
        110,
        103,
        117,
        100,
        97,
        32,
        100,
        101,
        108,
        32,
        84,
        114,
        97,
        118,
        195,
        169,
        115,
        0,
        65,
        118,
        105,
        110,
        103,
        117,
        100,
        97,
        32,
        101,
        108,
        32,
        84,
        114,
        97,
        118,
        195,
        168,
        115,
        0,
        67,
        71,
        45,
        50,
        97,
        0,
        84,
        195,
        186,
        110,
        101,
        108,
        32,
        100,
        39,
        69,
        110,
        118,
        97,
        108,
        105,
        114,
        97,
        0,
        65,
        118,
        105,
        110,
        103,
        117,
        100,
        97,
        32,
        100,
        101,
        108,
        32,
        67,
        111,
        110,
        115,
        101,
        108,
        108,
        32,
        71,
        101,
        110,
        101,
        114,
        97,
        108,
        0,
        70,
        114,
        97,
        110,
        99,
        101,
        0,
        79,
        99,
        99,
        105,
        116,
        97,
        110,
        105,
        101,
        0,
        78,
        32,
        50,
        50,
        0,
        2,
        22,
        0,
        5,
        0,
        65,
        118,
        105,
        110,
        103,
        117,
        100,
        97,
        32,
        100,
        101,
        108,
        32,
        76,
        108,
        111,
        115,
        101,
        114,
        0,
        80,
        111,
        110,
        116,
        32,
        100,
        39,
        79,
        114,
        100,
        105,
        110,
        111,
        0,
        65,
        118,
        105,
        110,
        103,
        117,
        100,
        97,
        32,
        100,
        101,
        108,
        32,
        80,
        111,
        110,
        116,
        32,
        100,
        39,
        79,
        114,
        100,
        105,
        110,
        111,
        0,
        65,
        118,
        105,
        110,
        103,
        117,
        100,
        97,
        32,
        100,
        101,
        108,
        32,
        67,
        97,
        115,
        97,
        109,
        97,
        110,
        121,
        97,
        0,
        48,
        124,
        53,
        49,
        50,
        0,
        84,
        114,
        97,
        118,
        101,
        115,
        115,
        105,
        97,
        32,
        100,
        39,
        79,
        114,
        100,
        105,
        110,
        111,
        0,
        48,
        124,
        49,
        48,
        50,
        52,
        0,
        82,
        111,
        116,
        111,
        110,
        100,
        97,
        32,
        100,
        101,
        32,
        83,
        111,
        108,
        100,
        101,
        117,
        0,
        82,
        111,
        116,
        111,
        110,
        100,
        97,
        32,
        100,
        101,
        108,
        32,
        84,
        97,
        114,
        116,
        101,
        114,
        0,
        80,
        111,
        110,
        116,
        32,
        100,
        101,
        32,
        67,
        97,
        115,
        116,
        101,
        108,
        108,
        97,
        114,
        0,
        0,
        0,
        0,
    ],
}
